--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "decompress-cli",
-  "version": "2.0.0",
-  "description": "Extracting archives made easy",
+  "version": "2.0.1",
+  "description": "Fork of kevva/decompress-cli. Extracting archives made easy",
   "license": "MIT",
-  "repository": "kevva/decompress-cli",
+  "repository": "nushio/decompress-cli",
   "author": {
     "name": "Kevin Mårtensson",
     "email": "kevinmartensson@gmail.com",
@@ -35,8 +35,8 @@
     "unzip"
   ],
   "dependencies": {
+    "@atomic-reactor/decompress": "^4.2.3",
     "arrify": "^1.0.1",
-    "decompress": "^4.0.0",
     "get-stdin": "^5.0.1",
     "meow": "^3.3.0",
     "strip-indent": "^2.0.0"
@@ -47,7 +47,7 @@
     "execa": "^0.4.0",
     "pify": "^2.3.0",
     "rimraf": "^2.5.2",
-    "xo": "*"
+    "xo": "^0.28.0"
   },
   "xo": {
     "esnext": true,
